syntax = "proto3";

package task;

message TaskModel {
    string id = 1;
    string title = 2;
    string start_date = 3;
    string end_date = 4;
    string due_at = 5;
    uint32 progress_rate = 6;
    bool milestone = 7;
    string parent_id = 8;
    string created_at = 9;
    string updated_at = 10;
}